# kairos-system

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: logging.conf  lsp_config.json  mcp_config.json
data/memory/: system_memory.json
data/metacognition/: learning_strategies.json
data/neuron_system/: neurons.json  synapses.json
data/sessions/: 1285eabb-827.json  1c62b8ba-32f.json  3a1b3dba-6a4.json  3adb4004-10c.json  462e5e06-5ed.json  4b998f66-5a2.json  59270c58-976.json  5c730977-a1d.json  5ce701f6-6b9.json  6cd96a5d-ca5.json  7675fe61-eb8.json  95ca6c3b-264.json  9e0a066e-301.json  b0f584a8-980.json  b38914fe-b04.json  c11a5b39-787.json  d39b2189-f90.json  e260531f-653.json  ea6cc0dc-e83.json
data/team_memory/: test_key.json
data/todos/: e2e.json  e2ev4.json  perf_test_0.json  perf_test_1.json  perf_test_10.json  perf_test_11.json  perf_test_12.json  perf_test_13.json  perf_test_14.json  perf_test_15.json  perf_test_16.json  perf_test_17.json  perf_test_18.json  perf_test_19.json  perf_test_2.json  perf_test_20.json  perf_test_21.json  perf_test_22.json  perf_test_23.json  perf_test_24.json  perf_test_25.json  perf_test_26.json  perf_test_27.json  perf_test_28.json  perf_test_29.json  perf_test_3.json  perf_test_30.json  perf_test_31.json  perf_test_32.json  perf_test_33.json  perf_test_34.json  perf_test_35.json  perf_test_36.json  perf_test_37.json  perf_test_38.json  perf_test_39.json  perf_test_4.json  perf_test_40.json  perf_test_41.json  perf_test_42.json  (+65 more)
data/unified_memory/: memory_index.json
data/user_profiles/: default_user.json  test_user.json
docs/: API文档.md  ARCHITECTURE.md  技术文档.md
docs/data/: emotional_companion.db  knowledge_base.db  knowledge_graph.pkl  task_automation.db  test_knowledge_graph.pkl
docs/data/chromadb/: chroma.sqlite3
docs/data/learning/: scheduled_tasks.json
docs/data/metacognition/: learning_strategies.json
docs/data/test_chromadb/: chroma.sqlite3
docs/data/test_memory/: test_memory.json
docs/data/version_control/: changes.json
frontend/: .env.example  README.md  app.js  auto_fix_log.txt  auto_fix_output.txt  auto_fix_stubs.py  fix_all_stubs.py  gen_state.py  gen_stubs.py  index.html  package.json  scan_all_imports.py  scan_deps.py  scan_imports.py  start.bat  style.css  tsconfig.json  update_stubs.py
frontend/src/: gemma4-entry.ts  gemma4-entry.tsx  ink.js  main.tsx
frontend/src/components/: App.tsx  DiagnosticsDisplay.tsx  Gemma4App.tsx  Gemma4Messages.tsx  Gemma4Spinner.tsx  Gemma4TextInput.tsx  LocalChat.tsx  Messages.tsx  TextInput.tsx
frontend/src/context/: backendContext.tsx
frontend/src/design/: components.tsx  index.ts  tokens.ts
frontend/src/screens/: Dashboard.tsx  Monitor.tsx  Security.tsx  Wiki.tsx
frontend/src/services/: diagnosticTracking.ts  errorHandling.ts  performance.ts  router.tsx  security.js  state.js
frontend/src/state/: core.ts  index.ts  slices.ts
scripts/: deploy.sh  start.bat  start.sh  start_production.bat
src/kairos/: .env.example  Dockerfile  Makefile  __init__.py  __main__.py  cli_chat.py  conftest.py  docker-compose.yml  main.py  requirements-dev.txt  requirements.txt  start.py  version.py
src/kairos/agents/: __init__.py  analysis_agent.py  base_agent.py  brain_agent.py  communication_agent.py  coordinator.py  execution_agent.py  learning_agent.py  memory_agent.py  monitoring_agent.py  perception_agent.py
src/kairos/config/: crewai_config.py  env_config.py
src/kairos/layers/: __init__.py  decision.py  decision_mingce.py  evaluation.py  evaluation_hengzhi.py  execution.py  execution_xingcheng.py  feedback.py  feedback_huiheng.py  integration.py  integration_huizhi.py  perception.py  perception_zhiwei.py
src/kairos/models/: api.py
src/kairos/routers/: __init__.py  agent.py  auth.py  chat.py  core.py  crewai.py  enhanced.py  events.py  health.py  services.py  wiki.py
src/kairos/services/: __init__.py  crewai_service.py
src/kairos/skills/: __init__.py  manager.py  system.py
src/kairos/system/: __init__.py  agent_task_flow.py  agent_team.py  async_generator_state_machine.py  autodream_engine.py  autonomous_engine.py  background_service.py  bootstrap.py  brain_agent_integration.py  browser_automation.py  cache.py  chromadb_memory.py  code_repair.py  cognitive_loop.py  communication.py  config.py  context_manager.py  core_config.py  core_decision_layer.py  core_definition.yaml  database.py  declarative_loader.py  degradation.py  digestion.py  dream.py  emotional_companion.py  (+82 more)
static/: chat.html
tests/: __init__.py  test_basic.py
tests/unit/: test_event_system.py  test_response.py
(+191 files in other folders)
